# ofs-convert-rs

./: .dockerignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
ofs-convert/: .gitignore  .travis.yml  CMakeLists.txt  crc.cpp  crc.h  ext4.cpp  ext4.h  ext4_bg.cpp  ext4_bg.h  ext4_dentry.cpp  ext4_dentry.h  ext4_extent.cpp  ext4_extent.h  ext4_inode.cpp  ext4_inode.h  extent-allocator.cpp  extent-allocator.h  extent_iterator.cpp  extent_iterator.h  fat.cpp  fat.h  metadata_reader.cpp  metadata_reader.h  ofs-convert.cpp  partition.cpp  partition.h  stream-archiver.cpp  stream-archiver.h  tree_builder.cpp  tree_builder.h  util.cpp  util.h  visualizer.cpp  visualizer.h  visualizer.js  visualizer_types.h
ofs-convert/cmake/: FindUUID.cmake
ofs-convert/test/: Readme.md  utils.py
ofs-convert/test/container/: .dockerignore  Dockerfile  build.sh  main.sh  run.sh
ofs-convert/test/tests/: default.mkfs.args
ofs-convert/test/tests/fat-variants/: generate-testcases.py
ofs-convert/test/tests/fat-variants/1024-4.test/: mkfs.args
ofs-convert/test/tests/fat-variants/2048-1.test/: mkfs.args
ofs-convert/test/tests/fat-variants/512-2.test/: mkfs.args
ofs-convert/test/tests/fat-variants/512-4.test/: mkfs.args
ofs-convert/test/tests/fat-variants/512-8.test/: mkfs.args
ofs-convert/test/tests/larger-than-bg.test/: generate.sh
ofs-convert/test/tests/single-block-file.test/: generate.sh
src/: allocator.rs  bitmap.rs  c_wrapper.rs  ext4.rs  fat.rs  lohi.rs  main.rs  partition.rs  ranges.rs  stream_archiver.rs  util.rs
src/ext4/: dentry.rs  (+9 more)
test/: README.md  example_fat.img  run.py  utils.py
(+71 files in other folders)
