[package]
name = "ofs-convert-rs"
version = "0.1.0"
authors = ["Lukas Behrendt <lukas.behrendt@student.hpi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
fs2 = "0.4.3"
nix = "0.20.0"
tempfile = "3.2.0"
chrono = "0.4.19"
num = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
cmake = "0.1.45"
